[gd_scene load_steps=14 format=3 uid="uid://b5ptabdfgohvv"]

[ext_resource type="Script" path="res://scenes/playable/game.gd" id="1_fpj1e"]
[ext_resource type="Shader" path="res://shaders/sky.gdshader" id="2_twyl1"]
[ext_resource type="PackedScene" uid="uid://cn4at1gn2s34f" path="res://assets/ground/ground.glb" id="3_mq8d8"]
[ext_resource type="PackedScene" uid="uid://rc8rnxx07fri" path="res://assets/tree/tree.glb" id="4_by38g"]
[ext_resource type="Script" path="res://scenes/ui/menu.gd" id="5_cs4tl"]
[ext_resource type="Script" path="res://scenes/camera.gd" id="6_n6fda"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6dqnt"]
shader = ExtResource("2_twyl1")
shader_parameter/skyColor = Color(3.65794e-06, 0.605081, 0.899226, 1)
shader_parameter/horizonColor = Color(0, 0.529412, 0.713726, 1)

[sub_resource type="Sky" id="Sky_hy35c"]
sky_material = SubResource("ShaderMaterial_6dqnt")

[sub_resource type="Environment" id="Environment_wlv7q"]
background_mode = 2
sky = SubResource("Sky_hy35c")
ambient_light_source = 2
ambient_light_color = Color(0.255659, 0.255659, 0.255659, 1)
tonemap_mode = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7eusc"]
bg_color = Color(0.45098, 0.54902, 0.870588, 0.215686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xv51"]
bg_color = Color(0.372549, 0.529412, 0.666667, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 4
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhk6y"]
bg_color = Color(0.705882, 0.882353, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
shadow_size = 1
shadow_offset = Vector2(-1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vv7p"]
bg_color = Color(0.607843, 0.490196, 0.784314, 1)

[node name="Game" type="Node"]
script = ExtResource("1_fpj1e")

[node name="Scenario" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Scenario"]
environment = SubResource("Environment_wlv7q")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Scenario"]
transform = Transform3D(0.866026, 0.25, -0.433012, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, 0, 5, 0)
shadow_enabled = true
shadow_opacity = 0.85

[node name="Ground" parent="Scenario" instance=ExtResource("3_mq8d8")]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0)

[node name="Trees" type="Node" parent="Scenario"]

[node name="tree" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 119.84, 0, 80.6539)

[node name="tree16" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(0.733955, 0, 0.679198, 0, 1, 0, -0.679198, 0, 0.733955, -93.3874, 0, -197.43)

[node name="tree2" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(0.733327, 0, 0.679877, 0, 1, 0, -0.679877, 0, 0.733327, 189.325, 0, -37.2645)

[node name="tree3" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(0.44779, 0, -0.894139, 0, 1, 0, 0.894139, 0, 0.44779, -194.319, 0, -44.8415)

[node name="tree11" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(0.44779, 0, -0.894139, 0, 1, 0, 0.894139, 0, 0.44779, -62.6619, 0, -68.3738)

[node name="tree12" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.820312, 0, -0.571917, 0, 1, 0, 0.571917, 0, -0.820312, 52.197, 0, -69.3738)

[node name="tree13" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.18841, 0, -0.982091, 0, 1, 0, 0.982091, 0, -0.18841, 1.6955, 0, -84.4671)

[node name="tree4" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.490174, 0, -0.871625, 0, 1, 0, 0.871625, 0, -0.490174, -114.214, 0, 23.2396)

[node name="tree5" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(0.0279915, 0, -0.999608, 0, 1, 0, 0.999608, 0, 0.0279915, 193.85, 0, 23.2396)

[node name="tree10" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.719715, 0, -0.694269, 0, 1, 0, 0.694269, 0, -0.719715, 121.281, 0, -9.71685)

[node name="tree6" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.7998, 0, 0.600267, 0, 1, 0, -0.600267, 0, -0.7998, -76.7072, 0, -127.661)

[node name="tree7" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.994643, 0, 0.103365, 0, 1, 0, -0.103365, 0, -0.994643, -64.2799, 0, 81.4574)

[node name="tree8" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.245917, 0, 0.969291, 0, 1, 0, -0.969291, 0, -0.245917, 92.3616, 0, 50.0546)

[node name="tree9" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.709472, 0, 0.704733, 0, 1, 0, -0.704733, 0, -0.709472, 45.5888, 0, 98.3469)

[node name="tree14" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.767881, 0, -0.640592, 0, 1, 0, 0.640592, 0, -0.767881, 12.2585, 0, 68.5933)

[node name="tree15" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -75.6239, 0, 131.825)

[node name="tree17" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -163.624, 0, 66.8253)

[node name="tree18" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -180.624, 0, -161.175)

[node name="tree19" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 155.376, 0, -161.175)

[node name="tree20" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 155.376, 0, -0.174698)

[node name="tree21" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 155.376, 0, 112.825)

[node name="tree22" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -9.6239, 0, 112.825)

[node name="tree23" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -36.6239, 0, 193.825)

[node name="tree24" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -148.624, 0, 164.825)

[node name="tree25" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 52.3761, 0, 164.825)

[node name="tree26" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 129.376, 0, 205.825)

[node name="tree27" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 129.376, 0, -86.1747)

[node name="tree28" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, 30.3761, 0, -159.175)

[node name="tree29" parent="Scenario/Trees" instance=ExtResource("4_by38g")]
transform = Transform3D(-0.96207, 0, -0.272801, 0, 1, 0, 0.272801, 0, -0.96207, -145.624, 0, -51.1747)

[node name="Maze Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_cs4tl")

[node name="MarginContainerBack" type="MarginContainer" parent="Maze Menu"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -222.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="Maze Menu/MarginContainerBack"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7eusc")

[node name="MarginContainer" type="MarginContainer" parent="Maze Menu/MarginContainerBack"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Maze Menu/MarginContainerBack/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="LabelWidth" type="Label" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Width"

[node name="HSliderWidth" type="HSlider" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 50.0
value = 5.0

[node name="LabelHeight" type="Label" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Height"

[node name="HSliderHeight" type="HSlider" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 2.0
max_value = 50.0
value = 5.0

[node name="Generate Slowly" type="CheckButton" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate Slowly"

[node name="Generate Maze" type="Button" parent="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.489622, 0.489622, 0.489622, 1)
theme_override_colors/font_focus_color = Color(0.490196, 0.490196, 0.490196, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_7xv51")
theme_override_styles/hover = SubResource("StyleBoxFlat_mhk6y")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6vv7p")
theme_override_styles/focus = SubResource("StyleBoxFlat_mhk6y")
text = "Generate Maze"

[node name="Camera Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Camera Origin"]
transform = Transform3D(1, 0, 0, 0, -5.96046e-08, 1, 0, -1, -5.96046e-08, 0, 0, 0)
collision_mask = 2
spring_length = 10.0
margin = 0.0

[node name="Camera" type="Camera3D" parent="Camera Origin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.53674e-07, 10)
script = ExtResource("6_n6fda")

[connection signal="value_changed" from="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer/HSliderWidth" to="Maze Menu" method="_on_h_slider_width_value_changed"]
[connection signal="value_changed" from="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer/HSliderHeight" to="Maze Menu" method="_on_h_slider_height_value_changed"]
[connection signal="toggled" from="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer/Generate Slowly" to="Maze Menu" method="_on_generate_slowly_toggled"]
[connection signal="pressed" from="Maze Menu/MarginContainerBack/MarginContainer/VBoxContainer/Generate Maze" to="Maze Menu" method="_on_generate_maze_pressed"]
